added mod-Fib stuff; improvements and additions to pnml & ma